--- a/src/components/MainPage/style/NowServing.css
+++ b/src/components/MainPage/style/NowServing.css
@@ -1,5 +1,4 @@
 .nowserving-container {
-  min-height: 617.45px;
   background-color: #fff;
   position: relative;
   width: 100%;
@@ -14,6 +13,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+@media screen and (max-width: 960px) {
+  .nowserving-container .nowserving-wrapper {
+    padding-bottom: 0;
+  }
 }
 
 .nowserving-container .nowserving-wrapper h4 {
