--- a/src/components/MainPage/style/NowServing.scss
+++ b/src/components/MainPage/style/NowServing.scss
@@ -1,5 +1,4 @@
 .nowserving-container {
-  min-height: 617.45px;
   background-color: #fff;
   position: relative;
   width: 100%;
@@ -13,6 +12,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    @media screen and (max-width: 960px) {
+      padding-bottom: 0;
+    }
 
     h4 {
       max-width: 100%;
