--- a/src/components/MainPage/style/PopularCuisines.scss
+++ b/src/components/MainPage/style/PopularCuisines.scss
@@ -1,8 +1,7 @@
 .popularcuisines-container {
-  // min-height: 391.6px;
   background-color: #f9fafb;
 
-  div {
+  .popularcuisines-wrapper {
     padding: 64px 0px;
     position: relative;
     margin: 0px auto;
@@ -10,11 +9,11 @@
     max-width: 920px;
 
     @media screen and (max-width: 960px) {
-      // padding: 7px 0 7px 16px;
+      padding: 0 0 64px;
     }
 
     h6 {
-      padding: 32px 0px 25px;
+      padding: 32px 5px 25px;
       display: flex;
       flex-direction: row;
       align-items: baseline;
@@ -24,30 +23,39 @@
       line-height: 1.3;
       letter-spacing: 0.5px;
       margin: 0;
+
+      @media screen and (max-width: 960px) {
+        font-size: 20px;
+        padding: 32px 15px 15px;
+      }
     }
 
     ul {
-      width: 100%;
       position: relative;
       overflow: hidden;
       border-radius: 4px;
-      margin: 0px;
+      margin: 0;
       position: relative;
       list-style: outside none none;
-      transition: transform 500ms cubic-bezier(1, 0, 0, 1) 0s;
       display: flex;
-      padding-left: 0;
+      padding: 0px 0px 5px;
 
       @media screen and (max-width: 960px) {
         max-height: 132px;
+        overflow-x: scroll;
+        padding: 0px 12px 8px;
       }
 
       li {
-        margin: 0px 2px;
-        padding: 2px 0px 0px 2px;
+        margin: 0px 4px;
+        padding: 2px 0px;
         cursor: pointer;
         list-style: outside none none;
-        width: 224px;
+        // width: 224px;
+
+        @media screen and (max-width: 960px) {
+          // width: 109px;
+        }
 
         a {
           div {
@@ -57,9 +65,12 @@
             background-repeat: no-repeat;
             background-position: center center;
             position: relative;
+            padding: 64px 0px;
+            width: 224px;
 
             &::after {
               content: '';
+              border-radius: 4px;
               background: rgba(0, 0, 0, 0)
                 linear-gradient(
                   rgba(255, 255, 255, 0) 15%,
@@ -69,11 +80,17 @@
               position: absolute;
               width: 100%;
               height: 100%;
+              top: 0;
+
+              @media screen and (max-width: 960px) {
+                border-radius: 8px;
+              }
             }
 
             @media screen and (max-width: 960px) {
               width: 109px;
               max-height: 132px;
+              border-radius: 8px;
             }
 
             p {
@@ -81,7 +98,6 @@
               font-size: 16px;
               line-height: 19px;
               max-height: 38px;
-              width: 180px;
               position: absolute;
               bottom: 12px;
               color: rgb(255, 255, 255);
@@ -89,6 +105,11 @@
               margin: 0px;
               text-align: left;
               overflow: hidden;
+              z-index: 1;
+
+              @media screen and (max-width: 960px) {
+                font-size: 14px;
+              }
             }
           }
         }
