--- a/src/components/MainPage/style/Footer.css
+++ b/src/components/MainPage/style/Footer.css
@@ -1,116 +1,86 @@
 .footer-container {
-  background-color: #f1f2f4;
-  position: relative;
   z-index: 1;
-  flex-shrink: 0;
-  background-color: #0c151d;
-}
-
-.footer-container .links {
-  background: #1b252e none repeat scroll 0% 0%;
-  position: relative;
-  width: 100%;
-}
-
-.footer-container .links .top-links {
-  max-width: 936px;
-  margin: 0px auto !important;
-  padding-top: 100px;
-}
-
-.footer-container .links .top-links div {
-  margin: 84px auto 0px;
+  background-color: #1b252e;
   display: flex;
-  flex-direction: row;
-  margin: 0;
-  width: 100%;
+  flex-direction: column;
+  align-items: center;
 }
 
-.footer-container .links .top-links div .siteLinks {
-  text-align: left;
+.footer-container .top-wrapper {
+  width: 936px;
+  display: grid;
+  grid-template-columns: 1fr auto;
+  grid-template-areas: 'site-links social-links' 'terms terms';
+  margin-top: 100px;
+}
+
+@media screen and (max-width: 960px) {
+  .footer-container .top-wrapper {
+    grid-template-areas: 'site-links' 'terms' 'social-links';
+    margin-top: 60px;
+    width: 100vw;
+    max-width: 500px;
+  }
+}
+
+.footer-container .top-wrapper .site-links {
+  grid-area: site-links;
+  display: flex;
   flex-flow: row wrap;
-  justify-content: left;
-  flex: 1 1 auto;
 }
 
-.footer-container .links .top-links div .siteLinks div {
+.footer-container .top-wrapper .site-links div {
   padding: 10px 0px;
-  text-align: left;
   width: 50%;
 }
 
-.footer-container .links .top-links div .siteLinks div a {
+.footer-container .top-wrapper .site-links div a {
   color: white;
   text-decoration: none;
   font-size: 14px;
   font-weight: 500;
   cursor: pointer;
   line-height: 21px;
-  text-align: left;
 }
 
-.footer-container .links .top-links div .socialLinks {
+@media screen and (max-width: 960px) {
+  .footer-container .top-wrapper .site-links div a {
+    padding: 20px;
+  }
+}
+
+.footer-container .top-wrapper .social-links {
+  grid-area: social-links;
   width: auto;
-  padding-top: 0px;
-  border-top: unset;
-  max-width: unset;
   display: flex;
   flex-direction: column;
-  -moz-box-pack: justify;
   justify-content: space-between;
 }
 
-.footer-container .links .top-links div .socialLinks .invite {
-  margin-top: 0px;
-  padding: 0px;
-  align-self: flex-start;
-  text-align: left;
-  color: white;
-}
-
-.footer-container .links .top-links div .socialLinks .invite button {
-  max-width: 100%;
+.footer-container .top-wrapper .social-links button {
   min-height: 42px;
-  padding: 0;
   text-align: center;
   font-weight: 600;
   line-height: 1.3;
   white-space: normal;
-  border-radius: 0;
   letter-spacing: 1px;
-  width: 100%;
-  font-size: 0.8125rem;
-  color: inherit;
-  border-color: currentColor;
-  min-width: 64px;
-  box-sizing: border-box;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
   border: 0;
   cursor: pointer;
-  margin: 0;
   display: inline-flex;
   outline: 0;
-  position: relative;
   align-items: center;
   vertical-align: middle;
-  justify-content: center;
   text-decoration: none;
   background-color: transparent;
 }
 
-.footer-container .links .top-links div .socialLinks .invite button span {
-  white-space: nowrap;
-  width: 100%;
-  display: inherit;
-  align-items: inherit;
-  justify-content: inherit;
+.footer-container .top-wrapper .social-links button span {
+  color: white;
+  display: inline-flex;
+  align-items: center;
 }
 
-.footer-container .links .top-links div .socialLinks .invite button span div {
-  padding: 0px 0px 0px 8px;
-}
-
-.footer-container .links .top-links div .socialLinks .invite button span div svg {
+.footer-container .top-wrapper .social-links button span svg {
   height: 20px;
   width: 20px;
   pointer-events: none;
@@ -121,14 +91,14 @@
   flex-shrink: 0;
 }
 
-.footer-container .links .top-links div .socialLinks .socialMedia {
+.footer-container .top-wrapper .social-links .social-media {
   padding: 0px;
   align-self: flex-end;
   display: flex;
   justify-content: center;
 }
 
-.footer-container .links .top-links div .socialLinks .socialMedia a {
+.footer-container .top-wrapper .social-links .social-media a {
   color: #0d4696;
   text-decoration: none;
   font-size: 14px;
@@ -138,14 +108,15 @@
   margin: 10px;
 }
 
-.footer-container .links .top-links div .socialLinks .socialMedia a svg {
+.footer-container .top-wrapper .social-links .social-media a svg {
   fill: #fff;
   height: 24px;
   width: 24px;
   pointer-events: none;
 }
 
-.footer-container .links .top-links .terms {
+.footer-container .top-wrapper .terms {
+  grid-area: terms;
   flex-direction: row;
   max-width: none;
   margin-top: 33px;
@@ -153,7 +124,7 @@
   border-top: 1px solid #5e6b77;
 }
 
-.footer-container .links .top-links .terms a {
+.footer-container .top-wrapper .terms a {
   padding: 0px 5px 0px 0px;
   text-decoration: none;
   font-size: 12px;
@@ -163,47 +134,48 @@
   line-height: 21px;
 }
 
-.footer-container .links .top-links .terms a::after {
+.footer-container .top-wrapper .terms a::after {
   content: ' | ';
   white-space: nowrap;
   color: #5e6b77;
 }
 
-.footer-container .links .top-links .terms .rewardsLink::after {
+.footer-container .top-wrapper .terms .rewardsLink::after {
   content: '';
 }
 
-.footer-container .bottom {
+.footer-container .bottom-container {
+  grid-area: bottom-container;
   display: flex;
-  flex-direction: row;
+  justify-content: center;
   align-items: center;
-  margin: 0 auto;
-  width: 936px;
-  min-height: 61px;
-}
-
-.footer-container .bottom .bottomWrapper {
-  display: flex;
-  justify-content: space-between;
+  background-color: #0c151d;
   width: 100%;
+  height: 61px;
 }
 
-.footer-container .bottom .bottomWrapper .select-country {
+.footer-container .bottom-container .bottom-wrapper {
+  display: flex;
+  width: 936px;
+  justify-content: space-between;
+}
+
+.footer-container .bottom-container .bottom-wrapper .select-country {
   color: #fff;
   align-items: center;
 }
 
-.footer-container .bottom .bottomWrapper .select-country .flag {
+.footer-container .bottom-container .bottom-wrapper .select-country .flag {
   height: 16px;
   width: 16px;
   vertical-align: middle;
 }
 
-.footer-container .bottom .bottomWrapper .select-country span {
+.footer-container .bottom-container .bottom-wrapper .select-country span {
   margin-left: 10px;
 }
 
-.footer-container .bottom .bottomWrapper .select-country .arrow {
+.footer-container .bottom-container .bottom-wrapper .select-country .arrow {
   fill: #fff;
   height: 16px;
   width: 16px;
@@ -212,7 +184,7 @@
   vertical-align: middle;
 }
 
-.footer-container .bottom .bottomWrapper .company-name {
+.footer-container .bottom-container .bottom-wrapper .company-name {
   color: white;
   text-align: right;
   max-width: unset;
@@ -221,7 +193,7 @@
   font-weight: 400;
 }
 
-.footer-container .bottom .bottomWrapper .company-name svg {
+.footer-container .bottom-container .bottom-wrapper .company-name svg {
   fill: #5e6b77;
   height: 10px;
   width: 10px;
