--- a/src/components/MainPage/style/Footer.scss
+++ b/src/components/MainPage/style/Footer.scss
@@ -1,195 +1,163 @@
 .footer-container {
-  background-color: rgb(241, 242, 244);
-  position: relative;
   z-index: 1;
-  flex-shrink: 0;
-  background-color: #0c151d;
+  background-color: #1b252e;
+  // display: grid;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-  .links {
-    background: rgb(27, 37, 46) none repeat scroll 0% 0%;
-    position: relative;
-    width: 100%;
+  .top-wrapper {
+    width: 936px;
+    display: grid;
+    grid-template-columns: 1fr auto;
+    grid-template-areas: 'site-links social-links' 'terms terms';
+    margin-top: 100px;
 
-    .top-links {
-      max-width: 936px;
-      margin: 0px auto !important;
-      padding-top: 100px;
+    @media screen and (max-width: 960px) {
+      grid-template-areas: 'site-links' 'terms' 'social-links';
+      margin-top: 60px;
+      width: 100vw;
+      max-width: 500px;
+    }
+
+    .site-links {
+      grid-area: site-links;
+      display: flex;
+      flex-flow: row wrap;
+
+      @media screen and (max-width: 960px) {
+        // flex-direction: column;
+        // width: 100vw;
+      }
 
       div {
-        margin: 84px auto 0px;
-        display: flex;
-        flex-direction: row;
-        margin: 0;
-        width: 100%;
-
-        .siteLinks {
-          text-align: left;
-          flex-flow: row wrap;
-          justify-content: left;
-          flex: 1 1 auto;
-
-          div {
-            padding: 10px 0px;
-            text-align: left;
-            width: 50%;
-
-            a {
-              color: white;
-              text-decoration: none;
-              font-size: 14px;
-              font-weight: 500;
-              cursor: pointer;
-              line-height: 21px;
-              text-align: left;
-            }
-          }
-        }
-
-        .socialLinks {
-          width: auto;
-          padding-top: 0px;
-          border-top: unset;
-          max-width: unset;
-          display: flex;
-          flex-direction: column;
-          -moz-box-pack: justify;
-          justify-content: space-between;
-          // width: 204px;
-
-          .invite {
-            margin-top: 0px;
-            padding: 0px;
-            align-self: flex-start;
-            text-align: left;
-            color: rgb(255, 255, 255);
-
-            button {
-              max-width: 100%;
-              min-height: 42px;
-              padding: 0;
-              text-align: center;
-              font-weight: 600;
-              line-height: 1.3;
-              white-space: normal;
-              border-radius: 0;
-              letter-spacing: 1px;
-              width: 100%;
-              font-size: 0.8125rem;
-              color: inherit;
-              border-color: currentColor;
-              min-width: 64px;
-              box-sizing: border-box;
-              transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
-                  0ms,
-                box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
-                border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-              border: 0;
-              cursor: pointer;
-              margin: 0;
-              display: inline-flex;
-              outline: 0;
-              position: relative;
-              align-items: center;
-              vertical-align: middle;
-              justify-content: center;
-              text-decoration: none;
-              background-color: transparent;
-
-              span {
-                white-space: nowrap;
-                width: 100%;
-                display: inherit;
-                align-items: inherit;
-                justify-content: inherit;
-
-                div {
-                  padding: 0px 0px 0px 8px;
-
-                  svg {
-                    height: 20px;
-                    width: 20px;
-                    pointer-events: none;
-                    fill: currentColor;
-                    display: inline-block;
-                    font-size: 1.5rem;
-                    transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-                    flex-shrink: 0;
-                  }
-                  // }
-                }
-              }
-            }
-          }
-
-          .socialMedia {
-            padding: 0px;
-            align-self: flex-end;
-            display: flex;
-            justify-content: center;
-
-            a {
-              color: rgb(13, 70, 150);
-              text-decoration: none;
-              font-size: 14px;
-              font-weight: 400;
-              cursor: pointer;
-              line-height: 21px;
-              margin: 10px;
-
-              svg {
-                fill: #fff;
-                height: 24px;
-                width: 24px;
-                pointer-events: none;
-              }
-            }
-          }
-        }
-      }
-      .terms {
-        flex-direction: row;
-        max-width: none;
-        margin-top: 33px;
-        padding: 20px 0px 64px;
-        border-top: 1px solid rgb(94, 107, 119);
+        padding: 10px 0px;
+        width: 50%;
 
         a {
-          padding: 0px 5px 0px 0px;
-          text-decoration: none;
-          font-size: 12px;
           color: white;
-          font-weight: 400;
+          text-decoration: none;
+          font-size: 14px;
+          font-weight: 500;
           cursor: pointer;
           line-height: 21px;
 
-          &::after {
-            content: ' | ';
-            white-space: nowrap;
-            color: rgb(94, 107, 119);
-          }
-        }
-
-        .rewardsLink {
-          &::after {
-            content: '';
+          @media screen and (max-width: 960px) {
+            padding: 20px;
           }
         }
       }
     }
-  }
 
-  .bottom {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin: 0 auto;
-    width: 936px;
-    min-height: 61px;
-
-    .bottomWrapper {
+    .social-links {
+      grid-area: social-links;
+      width: auto;
       display: flex;
+      flex-direction: column;
       justify-content: space-between;
-      width: 100%;
+      // width: 204px;
+
+      button {
+        min-height: 42px;
+        text-align: center;
+        font-weight: 600;
+        line-height: 1.3;
+        white-space: normal;
+        letter-spacing: 1px;
+        border: 0;
+        cursor: pointer;
+        display: inline-flex;
+        outline: 0;
+        align-items: center;
+        vertical-align: middle;
+        text-decoration: none;
+        background-color: transparent;
+
+        span {
+          color: rgb(255, 255, 255);
+          display: inline-flex;
+          align-items: center;
+
+          svg {
+            height: 20px;
+            width: 20px;
+            pointer-events: none;
+            fill: currentColor;
+            display: inline-block;
+            font-size: 1.5rem;
+            transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+            flex-shrink: 0;
+          }
+        }
+      }
+      .social-media {
+        padding: 0px;
+        align-self: flex-end;
+        display: flex;
+        justify-content: center;
+
+        a {
+          color: rgb(13, 70, 150);
+          text-decoration: none;
+          font-size: 14px;
+          font-weight: 400;
+          cursor: pointer;
+          line-height: 21px;
+          margin: 10px;
+
+          svg {
+            fill: #fff;
+            height: 24px;
+            width: 24px;
+            pointer-events: none;
+          }
+        }
+      }
+    }
+    .terms {
+      grid-area: terms;
+      flex-direction: row;
+      max-width: none;
+      margin-top: 33px;
+      padding: 20px 0px 64px;
+      border-top: 1px solid rgb(94, 107, 119);
+
+      a {
+        padding: 0px 5px 0px 0px;
+        text-decoration: none;
+        font-size: 12px;
+        color: white;
+        font-weight: 400;
+        cursor: pointer;
+        line-height: 21px;
+
+        &::after {
+          content: ' | ';
+          white-space: nowrap;
+          color: rgb(94, 107, 119);
+        }
+      }
+
+      .rewardsLink {
+        &::after {
+          content: '';
+        }
+      }
+    }
+  }
+  .bottom-container {
+    grid-area: bottom-container;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #0c151d;
+    width: 100%;
+    height: 61px;
+
+    .bottom-wrapper {
+      display: flex;
+      width: 936px;
+      justify-content: space-between;
 
       .select-country {
         color: #fff;
