--- a/src/components/MainPage/style/Footer.css
+++ b/src/components/MainPage/style/Footer.css
@@ -57,6 +57,13 @@
   justify-content: space-between;
 }
 
+@media screen and (max-width: 960px) {
+  .footer-container .top-wrapper .social-links {
+    border-top: 1px solid #5e6b77;
+    padding: 22px;
+  }
+}
+
 .footer-container .top-wrapper .social-links button {
   min-height: 42px;
   text-align: center;
@@ -89,13 +96,19 @@
   font-size: 1.5rem;
   transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
   flex-shrink: 0;
+  margin-left: 10px;
 }
 
 .footer-container .top-wrapper .social-links .social-media {
   padding: 0px;
   align-self: flex-end;
   display: flex;
-  justify-content: center;
+}
+
+@media screen and (max-width: 960px) {
+  .footer-container .top-wrapper .social-links .social-media {
+    align-self: flex-start;
+  }
 }
 
 .footer-container .top-wrapper .social-links .social-media a {
@@ -108,6 +121,12 @@
   margin: 10px;
 }
 
+@media screen and (max-width: 960px) {
+  .footer-container .top-wrapper .social-links .social-media a {
+    margin: 30px 30px 0 0;
+  }
+}
+
 .footer-container .top-wrapper .social-links .social-media a svg {
   fill: #fff;
   height: 24px;
@@ -115,13 +134,26 @@
   pointer-events: none;
 }
 
+@media screen and (max-width: 960px) {
+  .footer-container .top-wrapper .social-links .social-media a svg {
+    height: 34px;
+    width: 34px;
+  }
+}
+
 .footer-container .top-wrapper .terms {
   grid-area: terms;
-  flex-direction: row;
-  max-width: none;
+  display: flex;
   margin-top: 33px;
   padding: 20px 0px 64px;
   border-top: 1px solid #5e6b77;
+}
+
+@media screen and (max-width: 960px) {
+  .footer-container .top-wrapper .terms {
+    flex-direction: column;
+    padding: 40px 0px;
+  }
 }
 
 .footer-container .top-wrapper .terms a {
@@ -138,6 +170,17 @@
   content: ' | ';
   white-space: nowrap;
   color: #5e6b77;
+}
+
+@media screen and (max-width: 960px) {
+  .footer-container .top-wrapper .terms a {
+    font-size: 14px;
+    font-weight: 500;
+    padding: 12px 22px;
+  }
+  .footer-container .top-wrapper .terms a::after {
+    content: '';
+  }
 }
 
 .footer-container .top-wrapper .terms .rewardsLink::after {
@@ -158,6 +201,13 @@
   display: flex;
   width: 936px;
   justify-content: space-between;
+}
+
+@media screen and (max-width: 960px) {
+  .footer-container .bottom-container .bottom-wrapper {
+    width: 100vw;
+    margin: 0 22px;
+  }
 }
 
 .footer-container .bottom-container .bottom-wrapper .select-country {
@@ -191,6 +241,12 @@
   padding: unset;
   font-size: 12px;
   font-weight: 400;
+}
+
+@media screen and (max-width: 960px) {
+  .footer-container .bottom-container .bottom-wrapper .company-name {
+    font-size: 14px;
+  }
 }
 
 .footer-container .bottom-container .bottom-wrapper .company-name svg {
