--- a/src/components/MainPage/style/Footer.scss
+++ b/src/components/MainPage/style/Footer.scss
@@ -25,11 +25,6 @@
       display: flex;
       flex-flow: row wrap;
 
-      @media screen and (max-width: 960px) {
-        // flex-direction: column;
-        // width: 100vw;
-      }
-
       div {
         padding: 10px 0px;
         width: 50%;
@@ -55,7 +50,11 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      // width: 204px;
+
+      @media screen and (max-width: 960px) {
+        border-top: 1px solid rgb(94, 107, 119);
+        padding: 22px;
+      }
 
       button {
         min-height: 42px;
@@ -87,6 +86,7 @@
             font-size: 1.5rem;
             transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
             flex-shrink: 0;
+            margin-left: 10px;
           }
         }
       }
@@ -94,7 +94,10 @@
         padding: 0px;
         align-self: flex-end;
         display: flex;
-        justify-content: center;
+
+        @media screen and (max-width: 960px) {
+          align-self: flex-start;
+        }
 
         a {
           color: rgb(13, 70, 150);
@@ -105,22 +108,35 @@
           line-height: 21px;
           margin: 10px;
 
+          @media screen and (max-width: 960px) {
+            margin: 30px 30px 0 0;
+          }
+
           svg {
             fill: #fff;
             height: 24px;
             width: 24px;
             pointer-events: none;
+
+            @media screen and (max-width: 960px) {
+              height: 34px;
+              width: 34px;
+            }
           }
         }
       }
     }
     .terms {
       grid-area: terms;
-      flex-direction: row;
-      max-width: none;
+      display: flex;
       margin-top: 33px;
       padding: 20px 0px 64px;
       border-top: 1px solid rgb(94, 107, 119);
+
+      @media screen and (max-width: 960px) {
+        flex-direction: column;
+        padding: 40px 0px;
+      }
 
       a {
         padding: 0px 5px 0px 0px;
@@ -135,6 +151,16 @@
           content: ' | ';
           white-space: nowrap;
           color: rgb(94, 107, 119);
+        }
+
+        @media screen and (max-width: 960px) {
+          font-size: 14px;
+          font-weight: 500;
+          padding: 12px 22px;
+
+          &::after {
+            content: '';
+          }
         }
       }
 
@@ -158,6 +184,11 @@
       display: flex;
       width: 936px;
       justify-content: space-between;
+
+      @media screen and (max-width: 960px) {
+        width: 100vw;
+        margin: 0 22px;
+      }
 
       .select-country {
         color: #fff;
@@ -192,6 +223,10 @@
         padding: unset;
         font-size: 12px;
         font-weight: 400;
+
+        @media screen and (max-width: 960px) {
+          font-size: 14px;
+        }
 
         svg {
           fill: #5e6b77;
