--- a/src/components/MainPage/style/Footer.scss
+++ b/src/components/MainPage/style/Footer.scss
@@ -72,7 +72,7 @@
         text-decoration: none;
         background-color: transparent;
 
-        span {
+        div {
           color: rgb(255, 255, 255);
           display: inline-flex;
           align-items: center;
