--- a/src/components/Login/style/Login.css
+++ b/src/components/Login/style/Login.css
@@ -11,6 +11,7 @@
   position: absolute;
   left: 0;
   font-size: 1.2rem;
+  cursor: pointer;
 }
 
 .login-title h2 {
@@ -31,7 +32,6 @@
 .login-wrapper .social-link {
   display: flex;
   font-size: 1rem;
-  padding: 10px;
   background: #f1f2f4;
   justify-content: center;
   align-items: center;
@@ -56,6 +56,8 @@
   display: flex;
   align-self: center;
   text-transform: uppercase;
+  height: 58px;
+  align-items: center;
 }
 
 .login-wrapper .or {
@@ -73,7 +75,6 @@
   display: flex;
   font-size: 1rem;
   padding: 15px;
-  background: #f1f2f4;
   justify-content: center;
   align-items: center;
   cursor: pointer;
