--- a/src/components/MainPage/style/Hero.css
+++ b/src/components/MainPage/style/Hero.css
@@ -44,6 +44,7 @@
   background: #fff;
   border-radius: 4px 4px 0 0;
   display: flex;
+  align-items: stretch;
   height: 72px;
   position: relative;
 }
@@ -85,10 +86,10 @@
   color: #162028;
   overflow: hidden;
   outline: 0;
-  padding: 0 0 0 74px;
+  padding: 0 0 0 80px;
   text-overflow: ellipsis;
   background: transparent;
-  min-height: 72px;
+  height: 100px;
 }
 
 @media screen and (max-width: 960px) {
@@ -107,6 +108,8 @@
   justify-content: center;
   align-items: center;
   position: absolute;
+  width: 100%;
+  height: 100%;
   top: 0;
   bottom: 0;
   right: 0;
@@ -133,7 +136,7 @@
 
 .hero-container .centerMenu button {
   width: 100%;
-  height: 72px;
+  height: 60px;
   border-radius: 0 0 4px 4px;
   color: white;
   background-color: #f36d00;
