--- a/src/components/MainPage/style/Hero.scss
+++ b/src/components/MainPage/style/Hero.scss
@@ -39,6 +39,7 @@
       background: #fff;
       border-radius: 4px 4px 0 0;
       display: flex;
+      align-items: stretch;
       height: 72px;
       position: relative;
 
@@ -75,11 +76,10 @@
         color: #162028;
         overflow: hidden;
         outline: 0;
-        padding: 0 0 0 74px;
+        padding: 0 0 0 80px;
         text-overflow: ellipsis;
-        // width: 100%;
         background: transparent;
-        min-height: 72px;
+        height: 100px;
 
         @media screen and (max-width: 960px) {
           font-size: 14px;
@@ -96,6 +96,8 @@
         justify-content: center;
         align-items: center;
         position: absolute;
+        width: 100%;
+        height: 100%;
         top: 0;
         bottom: 0;
         right: 0;
@@ -119,7 +121,7 @@
 
     button {
       width: 100%;
-      height: 72px;
+      height: 60px;
       border-radius: 0 0 4px 4px;
       color: rgba(255, 255, 255, 1);
       background-color: #f36d00;
