--- a/src/components/MainPage/style/Sidebar.css
+++ b/src/components/MainPage/style/Sidebar.css
@@ -18,8 +18,16 @@
   box-shadow: rgba(0, 0, 0, 0.2) -2px 0px 4px 0px;
   background-color: #fff;
   align-items: center;
-  transform: translateX(80%);
-  transition: all 0.3s ease;
+  animation: sidebar-load 0.3s ease;
+}
+
+@keyframes sidebar-load {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
 }
 
 .sidebar-background .sidebar-container h2 {
@@ -57,8 +65,4 @@
   display: flex;
   align-items: center;
   padding-left: 30px;
-}
-
-.sidebar-animation:hover {
-  transform: translateX(0%);
 }
