Fixed minor sidebar issue

--- a/src/components/MainPage/style/Sidebar.css
+++ b/src/components/MainPage/style/Sidebar.css
@@ -5,7 +5,7 @@
   background: rgba(255, 255, 255, 0.7) !important;
   position: fixed;
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 .sidebar-background .sidebar-container {
