--- a/src/components/Login/style/Login.scss
+++ b/src/components/Login/style/Login.scss
@@ -8,6 +8,10 @@
   justify-content: center;
   align-items: center;
 
+  @media screen and (max-width: 960px) {
+    align-items: flex-end;
+  }
+
   .login-container {
     width: 430px;
     background-color: #fff;
@@ -25,11 +29,20 @@
     transform: translate3d(0, 0, 0);
     z-index: 10;
 
+    @media screen and (max-width: 960px) {
+      width: 100%;
+      max-height: 710px;
+      overflow-y: auto;
+    }
+
     .login-title {
       display: flex;
       justify-content: center;
-      // padding: 0 60px;
       position: relative;
+
+      @media screen and (max-width: 960px) {
+        border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+      }
 
       button {
         border: none;
@@ -46,6 +59,10 @@
         font-weight: 500;
         line-height: 28px;
         letter-spacing: 0;
+
+        @media screen and (max-width: 960px) {
+          font-size: 16px;
+        }
       }
     }
 
