--- a/src/components/MainPage/style/Sidebar.scss
+++ b/src/components/MainPage/style/Sidebar.scss
@@ -6,7 +6,6 @@
   position: fixed;
   display: flex;
   justify-content: flex-end;
-  // align-items: center;
 
   .sidebar-container {
     display: grid;
@@ -21,10 +20,10 @@
     animation: sidebar-load 0.3s ease;
 
     @keyframes sidebar-load {
-      0% {
+      from {
         transform: translateX(100%);
       }
-      100% {
+      to {
         transform: translateX(0%);
       }
     }
@@ -39,7 +38,6 @@
       display: flex;
       align-items: center;
       padding-left: 20px;
-      transform: translateY(8px);
     }
 
     div {
