--- a/src/components/MainPage/style/PopularCuisines.scss
+++ b/src/components/MainPage/style/PopularCuisines.scss
@@ -76,6 +76,7 @@
               width: 100%;
               height: 100%;
               top: 0;
+              left: 0;
 
               @media screen and (max-width: 960px) {
                 border-radius: 8px;
